syntax = "proto3";

package user;

service UserService {
	rpc CreateUser(CreateUserRequest) returns (UserResponse);
	rpc GetUser(GetUserRequest) returns (UserResponse);
	rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
	rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
	rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

enum UserRole {
	PRESIDENTE = 0;
	VOCAL = 1;
	COORDINADOR = 2;
	VOLUNTARIO = 3;
}

message User {
	string id = 1;
	string username = 2; 		// OBLIGATORIO
	string nombre = 3;   		// OBLIGATORIO
	string apellido = 4; 		// OBLIGATORIO
	string email = 5;    		// OBLIGATORIO
	string password = 6;		// Al dar de alta al usuario, su clave se genera al azar, se envía por e-mail al usuario y se guarda en la base de forma encriptada
	string telefono = 7;
	UserRole rol = 8;
	bool activo = 9;
}

message CreateUserRequest {
	string username = 1;
	string nombre = 2;
	string apellido = 3;
	string email = 4;
	UserRole rol = 5;
}

message GetUserRequest {
	string id = 1;
}

message ListUsersRequest {
	//
}

message ListUsersResponse {
	repeated User users = 1;
}

message UpdateUserRequest {	// Modificación: se puede modificar todos los campos, excepto la clave.
	string id = 1;
	string username = 2;
	string nombre = 3;
	string apellido = 4;
	string email = 5;
	string telefono = 6;
	UserRole rol = 7;
	bool activo = 8;
}

message UserResponse {
  User user = 1;
  string message = 2;
}

message DeleteUserRequest { // Baja: no se borran físicamente de la base, solamente se los deja como inactivos.
  string id = 1;
}

message DeleteUserResponse {
  string message = 1;
  bool success = 2;
}